--- a/app/src/main/res/layout/item_goods.xml
+++ b/app/src/main/res/layout/item_goods.xml
@@ -7,10 +7,28 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/textView_items"
-        android:layout_width="match_parent"
+        android:id="@+id/tv_discount"
+        android:layout_width="150sp"
         android:layout_height="50sp"
+        android:layout_weight="1"
         android:textSize="20sp"
-        android:text="상품명"/>
+        android:text="할인가"/>
+
+    <TextView
+        android:id="@+id/tv_price"
+        android:layout_width="100sp"
+        android:layout_height="50sp"
+        android:layout_weight="2"
+        android:textSize="10sp"
+        android:textColor="#ff0000"
+        android:text="할인율"/>
+
+    <TextView
+        android:id="@+id/tv_date"
+        android:layout_width="0dp"
+        android:layout_height="50sp"
+        android:layout_weight="3"
+        android:textSize="10sp"
+        android:text="유통기한"/>
 
 </LinearLayout>
