--- a/app/src/main/res/layout/activity_drawer.xml
+++ b/app/src/main/res/layout/activity_drawer.xml
@@ -4,36 +4,93 @@
     android:layout_width="240dp"
     android:layout_height="match_parent"
     android:layout_gravity="start"
-    android:background="#E6E6E6"
+    android:background="#ffffff"
     android:id="@+id/drawer"
     android:orientation="vertical">
 
-    <Button
-        android:id="@+id/btn_close"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="메뉴닫기"/>
+<!--    <Button-->
+<!--        android:id="@+id/btn_close"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_margin="10dp"-->
+<!--        android:text="메뉴닫기"/>-->
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:layout_marginTop="20sp"
+        android:layout_marginLeft="20sp"
+        android:textSize="25sp"
+        android:textColor="@color/black"
+        android:gravity="left"
+        android:text="반갑습니다"/>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_username"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5sp"
+            android:layout_marginLeft="20sp"
+            android:textSize="25sp"
+            android:textColor="@color/black"
+            android:gravity="left"
+            android:text="Name"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5sp"
+            android:textSize="25sp"
+            android:textColor="@color/black"
+            android:gravity="left"
+            android:text="님!"/>
+    </LinearLayout>
+
+<!--    구분선-->
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1sp"
+        android:background="#000000"
+        android:layout_marginLeft="20sp"
+        android:layout_marginRight="50sp"
+        android:layout_marginTop="20sp"
+        />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20sp"
+        android:layout_marginLeft="20sp"
+        android:textSize="25sp"
+        android:textColor="@color/black"
+        android:gravity="left"
         android:text="MY POINT"/>
 
     <TextView
         android:id="@+id/user_data"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:layout_marginTop="3sp"
+        android:layout_marginLeft="20sp"
+        android:textSize="25sp"
+        android:textColor="#ff0000"
+        android:gravity="left"
         android:text="내 정보"/>
 
-    <Button
-        android:id="@+id/btn_history"
+    <!--    구분선-->
+    <View
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="구매 내역"/>
+        android:layout_height="1sp"
+        android:background="#000000"
+        android:layout_marginLeft="20sp"
+        android:layout_marginRight="50sp"
+        android:layout_marginTop="20sp"
+        />
 
     <Button
         android:id="@+id/btn_storage"
