--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ffffff"
     tools:context=".MainActivity">
 
     <LinearLayout
@@ -14,15 +15,34 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <Button
-            android:id="@+id/btn_open"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="메뉴 열기"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40sp"
+            android:orientation="horizontal"
+            android:layout_marginBottom="40sp">
+
+            <ImageView
+                android:id="@+id/btn_open"
+                android:layout_width="40sp"
+                android:layout_height="40sp"
+                android:src="@drawable/category_bar"
+                android:layout_marginLeft="10sp"
+                android:layout_marginTop="10sp"
+                android:layout_marginBottom="20sp"
+                android:layout_marginRight="0sp"/>
+
+            <ImageView
+                android:layout_width="200sp"
+                android:layout_height="40sp"
+                android:src="@drawable/main_2"
+                android:layout_marginTop="10sp"/>
+
+
+
+        </LinearLayout>
+
+
+
 
 <!--        <Button-->
 <!--            android:layout_width="wrap_content"-->
@@ -67,7 +87,10 @@
                 android:tag="cafe"
                 android:text="카페"
                 android:gravity="center"
-                android:background="#0C000000"
+                android:background="@drawable/button_category"
+                android:textColor="@color/white"
+                android:fontFamily="@font/bmhan"
+                android:textSize="25sp"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
                 android:layout_marginLeft="20dp"
@@ -82,7 +105,10 @@
                 android:tag="convenient"
                 android:text="편의점"
                 android:gravity="center"
-                android:background="#0C000000"
+                android:background="@drawable/button_category"
+                android:textColor="@color/white"
+                android:fontFamily="@font/bmhan"
+                android:textSize="25sp"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:clickable="true"
@@ -96,7 +122,10 @@
                 android:tag="fastfood"
                 android:text="패스트푸드"
                 android:gravity="center"
-                android:background="#0C000000"
+                android:background="@drawable/button_category"
+                android:textColor="@color/white"
+                android:fontFamily="@font/bmhan"
+                android:textSize="20sp"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="20dp"
@@ -111,7 +140,10 @@
                 android:tag="giftcard"
                 android:text="상품권"
                 android:gravity="center"
-                android:background="#0C000000"
+                android:background="@drawable/button_category"
+                android:textColor="@color/white"
+                android:fontFamily="@font/bmhan"
+                android:textSize="25sp"
                 android:layout_marginLeft="20dp"
                 android:layout_centerVertical="true"
                 android:clickable="true"
@@ -125,7 +157,10 @@
                 android:tag="movie"
                 android:text="영화/공연"
                 android:gravity="center"
-                android:background="#0C000000"
+                android:background="@drawable/button_category"
+                android:textColor="@color/white"
+                android:fontFamily="@font/bmhan"
+                android:textSize="20sp"
                 android:layout_marginLeft="20dp"
                 android:layout_centerVertical="true"
                 android:layout_centerHorizontal="true"
@@ -140,7 +175,10 @@
                 android:tag="icecream"
                 android:text="아이스크림"
                 android:gravity="center"
-                android:background="#0C000000"
+                android:background="@drawable/button_category"
+                android:textColor="@color/white"
+                android:fontFamily="@font/bmhan"
+                android:textSize="20sp"
                 android:layout_marginRight ="20dp"
                 android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"
