--- a/app/src/main/res/layout/activity_storage_item.xml
+++ b/app/src/main/res/layout/activity_storage_item.xml
@@ -19,6 +19,6 @@
             android:layout_width="match_parent"
             android:layout_height="50sp"
             android:layout_gravity="bottom"
-            android:text="사용완료"/>
+            android:text="확인"/>
 
 </LinearLayout>
