--- a/app/src/main/res/layout/activity_buy.xml
+++ b/app/src/main/res/layout/activity_buy.xml
@@ -12,6 +12,9 @@
         android:layout_height="wrap_content"
         android:text="상품 구매하기"
         android:textSize="30sp"
+        android:layout_marginTop="10sp"
+        android:fontFamily="@font/hanba"
+        android:textColor="@color/black"
         android:gravity="center"/>
 
     <TextView
@@ -19,14 +22,18 @@
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:text="상품정보"
+        android:fontFamily="@font/hanba"
+        android:textColor="@color/black"
         android:layout_marginLeft="20sp"/>
 
     <TextView
         android:id="@+id/tv_buy_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="40sp"
+        android:textSize="24sp"
         android:text="정보"
+        android:fontFamily="@font/hanba"
+        android:textColor="@color/black"
         android:layout_marginLeft="20sp"/>
 
     <TextView
@@ -34,14 +41,18 @@
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:text="구매할 가격"
+        android:fontFamily="@font/hanba"
+        android:textColor="@color/black"
         android:layout_marginLeft="20sp"/>
 
     <TextView
         android:id="@+id/tv_buy_price"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="40sp"
+        android:textSize="30sp"
         android:text="가격"
+        android:fontFamily="@font/hanba"
+        android:textColor="@color/black"
         android:layout_marginLeft="20sp"/>
 
     <TextView
@@ -49,6 +60,8 @@
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:text="현재 포인트"
+        android:fontFamily="@font/hanba"
+        android:textColor="@color/black"
         android:layout_marginLeft="20sp"/>
 
     <TextView
@@ -57,6 +70,8 @@
         android:layout_height="wrap_content"
         android:textSize="40sp"
         android:text="포인트"
+        android:fontFamily="@font/hanba"
+        android:textColor="#ff0000"
         android:layout_marginLeft="20sp"/>
 
     <TextView
@@ -64,6 +79,8 @@
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:text="구매 후 포인트"
+        android:fontFamily="@font/hanba"
+        android:textColor="@color/black"
         android:layout_marginLeft="20sp"/>
 
     <TextView
@@ -72,6 +89,8 @@
         android:layout_height="wrap_content"
         android:textSize="40sp"
         android:text="포인트"
+        android:fontFamily="@font/hanba"
+        android:textColor="#ff0000"
         android:layout_marginLeft="20sp"/>
 
     <Button
@@ -79,6 +98,9 @@
         android:layout_height="wrap_content"
         android:text="구매하기"
         android:clickable="true"
+        android:layout_marginTop="20sp"
+        android:background="@drawable/button_drawal"
+        android:textColor="@color/white"
         android:onClick="buy_goods"/>
 
 </LinearLayout>
