--- a/app/src/main/res/layout/activity_sell.xml
+++ b/app/src/main/res/layout/activity_sell.xml
@@ -11,29 +11,36 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="상품 판매하기"
+        android:layout_marginTop="10sp"
+        android:fontFamily="@font/hanba"
+        android:textColor="@color/black"
         android:textSize="30sp"
         android:gravity="center"/>
 
     <ImageView
         android:id="@+id/iv_gifticon"
-        android:layout_width="300sp"
-        android:layout_height="300sp"
+        android:layout_width="250sp"
+        android:layout_height="250sp"
         android:layout_gravity="center"
-        android:layout_marginBottom="50sp"/>
+        android:layout_marginBottom="30sp"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:text="정가"
+        android:fontFamily="@font/hanba"
+        android:textColor="@color/black"
         android:layout_marginLeft="20sp"/>
 
     <TextView
         android:id="@+id/tv_sell_price"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="40sp"
+        android:textSize="30sp"
         android:text="정가"
+        android:fontFamily="@font/hanba"
+        android:textColor="@color/black"
         android:layout_marginLeft="20sp"/>
 
     <TextView
@@ -41,27 +48,66 @@
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:text="할인가"
+        android:fontFamily="@font/hanba"
+        android:textColor="@color/black"
         android:layout_marginLeft="20sp"/>
 
     <EditText
         android:id="@+id/tv_sell_discount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="30sp"
+        android:textSize="20sp"
+        android:fontFamily="@font/hanba"
+        android:textColor="@color/black"
         android:hint="판매할 가격을 입력해주세요"
         android:layout_marginLeft="20sp"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:text="유통기한"
+        android:fontFamily="@font/hanba"
+        android:textColor="@color/black"
+        android:layout_marginLeft="20sp"/>
+
+    <TextView
+        android:id="@+id/tv_date_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:text="유통기한을 선택해주세요"
+        android:fontFamily="@font/hanba"
+        android:textColor="@color/black"
+        android:layout_marginLeft="20sp"/>
+
+    <Button
+        android:id="@+id/tv_date_select"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="select_date"
+        android:background="@drawable/button_drawal"
+        android:layout_marginTop="10sp"
+        android:textColor="@color/white"
+        android:text="유통기한 선택하기"/>
 
     <Button
         android:id="@+id/tv_sell_picture"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="sell_pics"
-        android:text="사진 첨부하기"/>
+        android:background="@drawable/button_drawal"
+        android:layout_marginTop="10sp"
+        android:textColor="@color/white"
+        android:text="기프티콘 첨부하기"/>
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="판매하기"
+        android:background="@drawable/button_drawal"
+        android:textColor="@color/white"
+        android:layout_marginTop="10sp"
         android:clickable="true"
         android:onClick="sell_goods"/>
 
