--- a/app/src/main/res/layout/activity_storage.xml
+++ b/app/src/main/res/layout/activity_storage.xml
@@ -11,7 +11,11 @@
         android:id="@+id/tv_storage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20dp"
+        android:textSize="30dp"
+        android:layout_marginLeft="20sp"
+        android:layout_marginTop="20sp"
+        android:fontFamily="@font/hanba"
+        android:textColor="@color/black"
         android:text="보관함"
         />
 
