--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -13,8 +13,10 @@
         android:layout_width="100dp"
         android:gravity="center"
         android:layout_height="100dp"
-        android:background="#0A000000"
-        android:textSize="20dp"
+        android:background="@drawable/button_category"
+        android:textColor="@color/white"
+        android:fontFamily="@font/hanba"
+        android:textSize="15dp"
         android:text="상품이름"
         />
 
