--- a/app/src/main/res/layout/item_storage.xml
+++ b/app/src/main/res/layout/item_storage.xml
@@ -4,14 +4,17 @@
     android:padding="10dp"
     android:orientation="horizontal"
     android:layout_width="match_parent"
+    android:background="#E3E3E3"
     android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/tv_Itemname"
-        android:layout_width="150sp"
+        android:layout_width="230sp"
         android:layout_height="50sp"
         android:layout_weight="1"
-        android:textSize="20sp"
+        android:textSize="15sp"
+        android:fontFamily="@font/hanba"
+        android:textColor="@color/black"
         android:text="아이템명"/>
 
     <TextView
@@ -20,6 +23,8 @@
         android:layout_height="50sp"
         android:layout_weight="3"
         android:textSize="10sp"
+        android:fontFamily="@font/hanba"
+        android:textColor="@color/black"
         android:text="유통기한"/>
 
 </LinearLayout>
