--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -78,7 +78,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="370dp">
+            android:layout_height="350dp">
 
             <TextView
                 android:id="@+id/btn_category1"
@@ -87,10 +87,10 @@
                 android:tag="cafe"
                 android:text="카페"
                 android:gravity="center"
-                android:background="@drawable/button_category"
+                android:background="@drawable/button_cafe"
                 android:textColor="@color/white"
                 android:fontFamily="@font/hanba"
-                android:textSize="20sp"
+                android:textSize="0sp"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
                 android:layout_marginLeft="20dp"
@@ -102,13 +102,13 @@
                 android:id="@+id/btn_category2"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:tag="convenient"
                 android:text="편의점"
+                android:tag="convenient"
                 android:gravity="center"
-                android:background="@drawable/button_category"
+                android:background="@drawable/button_convin"
                 android:textColor="@color/white"
                 android:fontFamily="@font/hanba"
-                android:textSize="20sp"
+                android:textSize="0sp"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:clickable="true"
@@ -122,10 +122,10 @@
                 android:tag="fastfood"
                 android:text="패스트푸드"
                 android:gravity="center"
-                android:background="@drawable/button_category"
+                android:background="@drawable/button_fast"
                 android:textColor="@color/white"
                 android:fontFamily="@font/hanba"
-                android:textSize="15sp"
+                android:textSize="0sp"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="20dp"
@@ -140,10 +140,10 @@
                 android:tag="giftcard"
                 android:text="상품권"
                 android:gravity="center"
-                android:background="@drawable/button_category"
+                android:background="@drawable/button_gift"
                 android:textColor="@color/white"
                 android:fontFamily="@font/hanba"
-                android:textSize="20sp"
+                android:textSize="0sp"
                 android:layout_marginLeft="20dp"
                 android:layout_centerVertical="true"
                 android:clickable="true"
@@ -155,12 +155,12 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:tag="movie"
-                android:text="영화/공연"
                 android:gravity="center"
-                android:background="@drawable/button_category"
+                android:text="영화/공연"
+                android:background="@drawable/button_movie"
                 android:textColor="@color/white"
                 android:fontFamily="@font/hanba"
-                android:textSize="15sp"
+                android:textSize="0sp"
                 android:layout_marginLeft="20dp"
                 android:layout_centerVertical="true"
                 android:layout_centerHorizontal="true"
@@ -173,12 +173,12 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:tag="icecream"
-                android:text="아이스크림"
                 android:gravity="center"
-                android:background="@drawable/button_category"
+                android:text="아이스크림"
+                android:background="@drawable/button_ice"
                 android:textColor="@color/white"
                 android:fontFamily="@font/hanba"
-                android:textSize="15sp"
+                android:textSize="0sp"
                 android:layout_marginRight ="20dp"
                 android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"
@@ -189,8 +189,8 @@
         </RelativeLayout>
 
         <ImageView
-            android:layout_width="300sp"
-            android:layout_height="200sp"
+            android:layout_width="400sp"
+            android:layout_height="230sp"
             android:src="@drawable/main_banner"
             android:layout_marginTop="50sp"
             android:layout_gravity="center"/>
