--- a/app/src/main/res/layout/item_goods.xml
+++ b/app/src/main/res/layout/item_goods.xml
@@ -9,6 +9,7 @@
 
     <TextView
         android:id="@+id/tv_discount"
+        android:gravity="center_vertical"
         android:layout_width="50sp"
         android:layout_height="50sp"
         android:layout_weight="1"
@@ -19,6 +20,7 @@
 
     <TextView
         android:id="@+id/tv_price"
+        android:gravity="center_vertical"
         android:layout_width="80sp"
         android:layout_height="50sp"
         android:layout_weight="2"
@@ -29,6 +31,7 @@
 
     <TextView
         android:id="@+id/tv_date"
+        android:gravity="center_vertical"
         android:layout_width="20dp"
         android:layout_height="50sp"
         android:layout_weight="3"
