--- a/app/src/main/res/layout/item_storage.xml
+++ b/app/src/main/res/layout/item_storage.xml
@@ -14,6 +14,7 @@
         android:layout_weight="1"
         android:textSize="15sp"
         android:fontFamily="@font/hanba"
+        android:gravity="center_vertical"
         android:textColor="@color/black"
         android:text="아이템명"/>
 
@@ -23,6 +24,7 @@
         android:layout_height="50sp"
         android:layout_weight="3"
         android:textSize="10sp"
+        android:gravity="center_vertical"
         android:fontFamily="@font/hanba"
         android:textColor="@color/black"
         android:text="유통기한"/>
