최정인의 작업물

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -57,6 +57,7 @@
             android:layout_weight="1"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
+            android:textColor="#FF0000"
             android:background="@drawable/button_loginbar"
             android:fontFamily="@font/hanba"
             android:text="로그인"/>
